# anime-quoter

./: Cargo.toml  README.md
src/: main.rs
