[package]
name = "anime_quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.6", features = ["derive"] }